--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-  --color-brand--1: #ffb545;
-  --color-brand--2: #00c46a;
+  --color-brand--1: blue;
+  --color-brand--2: red;
 
   --color-dark--1: #2d3439;
   --color-dark--2: #42484d;
